--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,14 @@
   "description": "Ask me anything.",
   "icons": [
     {
-      "src": "ask-jetrom.jpg",
+      "src": "ask-jetrom.png",
       "sizes": "192x192",
-      "type": "image/jpeg"
+      "type": "image/png"
     },
     {
-      "src": "ask-jetrom.jpg",
+      "src": "ask-jetrom.png",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/png"
     }
   ]
 }
