--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,7 @@
 {
   "name": "Ask Jetrom",
   "short_name": "AskJetrom",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "https://jeielmiranda.is-a.dev/ask-jetrom-ui/",
   "display": "standalone",
   "background_color": "#f8f9fa",
   "theme_color": "#4285f4",
